crates/plotnik-tests/tests/04-emit/types/quantifiers/error_star_inner_capture_needs_repetition_capture.txt
Q = (program
  {
    (expression_statement) @s
  }*
)
------------------ DIAGNOSTICS -------------------
error: captures `@s` repeat with `*` but are not collected into a list
 --> query.ptk:2:3
  |
2 | /   {
3 | |     (expression_statement) @s
4 | |   }*
  | |____^
  |
help: collect one record per repetition in `@items`
  |
2 |   {
3 |     (expression_statement) @s
4 ~   }* @items
  |
help: append `@_` instead if the repeated result should be discarded
